# tensorflow_gpu_setup

./: README.md  hello.py  pyproject.toml  test.py  test_tensorflow.ipynb  test_tensorflow.py  test_tf_gpu.py
