[project]
name = "tensorflow-gpu-setup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "marimo>=0.11.2",
    "matplotlib>=3.10.0",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "silence-tensorflow>=1.2.3",
    "tensorflow[and-cuda]>=2.18.0",
    "watchdog>=6.0.0",
]
